--- a/crypto-market-integration/Cargo.toml
+++ b/crypto-market-integration/Cargo.toml
@@ -29,6 +29,7 @@ nanomsg = "0.7.2"
 
 rust_decimal = "1.23.1"
 rust_decimal_macros = "1.23.1"
+phf = { version = "0.10.1", features = ["macros"] }
 
 [profile.release]
 lto = true
