--- a/crypto-market-replay/Cargo.toml
+++ b/crypto-market-replay/Cargo.toml
@@ -26,3 +26,5 @@ rust_decimal_macros = "1.23.1"
 tokio-util = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
+serde_derive = "1.0.81"
+ 
