--- a/crypto-market-integration/Cargo.toml
+++ b/crypto-market-integration/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 crypto-crawler = "4.3.4"
 crypto-markets = "1.2.5"
 crypto-market-type = "1.1.0"
-crypto-msg-parser = "2.2.7"
+crypto-msg-parser = {git = "https://github.com/wmjtyd/crypto-crawler-rs"}
 crypto-msg-type = "1.0.6"
 crypto-pair = "2.2.7"
 crypto-rest-client = "0.9.0"
@@ -28,10 +28,13 @@ openssl = { version = "0.10", features = ["vendored"] }
 nanomsg = "0.7.2"
 chrono = "0.4.19"
 
+
 rust_decimal = "1.23.1"
 rust_decimal_macros = "1.23.1"
 phf = { version = "0.10.1", features = ["macros"] }
 futures = "0.3.21"
+
+clap = "~2.27.0"
 
 [profile.release]
 lto = true
