--- a/crypto-market-recorder/Cargo.toml
+++ b/crypto-market-recorder/Cargo.toml
@@ -32,9 +32,4 @@ rust_decimal = "1.23.1"
 rust_decimal_macros = "1.23.1"
 phf = { version = "0.10.1", features = ["macros"] }
 futures = "0.3.21"
-
-[profile.release]
-lto = true
-strip = "debuginfo"
-codegen-units = 1
-opt-level="z"
+wmjtyd-libstock = "0.1.0"
