--- a/crypto-market-recorder/Cargo.toml
+++ b/crypto-market-recorder/Cargo.toml
@@ -20,7 +20,7 @@ serde_json = "1.0.81"
 signal-hook = { version = "0.3.14", features = ["extended-siginfo"] }
 log = "0.4.17"
 env_logger = "0.9.0"
-tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "macros"] }
 lazy_static = "1.4.0"
 slack-hook = "0.8.0"
 openssl = { version = "0.10", features = ["vendored"] }
@@ -33,3 +33,6 @@ rust_decimal_macros = "1.23.1"
 phf = { version = "0.10.1", features = ["macros"] }
 futures = "0.3.21"
 wmjtyd-libstock = "0.1.0"
+tracing = "0.1.35"
+concat-string = "1.0.1"
+thiserror = "1.0.31"
