--- a/crypto-market-integration/Cargo.toml
+++ b/crypto-market-integration/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crypto-crawler = "4.3.4"
-crypto-markets = "1.2.5"
-crypto-market-type = "1.1.0"
-crypto-msg-parser = {git = "https://github.com/wmjtyd/crypto-crawler-rs"}
-crypto-msg-type = "1.0.6"
-crypto-pair = "2.2.7"
-crypto-rest-client = "0.9.0"
-crypto-ws-client = "4.11.3"
+crypto-crawler = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
+crypto-markets = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
+crypto-market-type = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
+crypto-msg-parser = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
+crypto-msg-type = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
+crypto-pair = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
+crypto-rest-client = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
+crypto-ws-client = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
 redis = "0.21.5"
 reopen = { version = "1.0.3", features = ["signals"] }
 serde_json = "1.0.81"
