--- a/crypto-market-integration/Cargo.toml
+++ b/crypto-market-integration/Cargo.toml
@@ -27,7 +27,8 @@ slack-hook = "0.8.0"
 openssl = { version = "0.10", features = ["vendored"] }
 nanomsg = "0.7.2"
 chrono = "0.4.19"
-wmjtyd-libstock = { git = "https://github.com/wmjtyd/libstock", ref = "ced2af0a02b259dfb64e21f76a959b05cdfd590b", version = "0.2.0-beta.3" }
+wmjtyd-libstock = { git = "https://github.com/wmjtyd/libstock", branch="staging-0.3.0b2" }
+
 
 rust_decimal = "1.23.1"
 rust_decimal_macros = "1.23.1"
@@ -40,7 +41,7 @@ clap = "~2.27.0"
 version = "=2.4.12"
 optional = true
 git = "https://github.com/wmjtyd/crypto-crawler-rs"
-rev = "bb8d89563e6add82a0825f7b2a47d58c42d423cc"
+rev = "d45528283b387bbe6c46507d7837bf1dd229ff6d"
 
 [features]
 default = ["crypto"]
