--- a/crypto-market-integration/Cargo.toml
+++ b/crypto-market-integration/Cargo.toml
@@ -50,8 +50,7 @@ rev = "d41482af5fc33797ee12c54da809b660850d2ab2"
 
 
 [dependencies.wmjtyd-libstock]
-git = "https://github.com/iyangdianfeng/libstock.git"
-# path = "../../libstock"
+git = "https://github.com/wmjtyd/libstock.git"
 default-features = false
 features = ["crypto", "zeromq", "slack"]
 branch = "staging-0.3.0b3"
