update: dependencie libstock branch develop

--- a/crypto-market-recorder/Cargo.toml
+++ b/crypto-market-recorder/Cargo.toml
@@ -32,6 +32,7 @@ thiserror = "1.0.31"
 git = "https://github.com/wmjtyd/libstock.git"
 default-features = false
 features = ["crypto", "zeromq", "slack"]
+branch = "develop"
 
 
 [dev-dependencies]
