--- a/crypto-market-integration/Cargo.toml
+++ b/crypto-market-integration/Cargo.toml
@@ -53,3 +53,4 @@ rev = "d41482af5fc33797ee12c54da809b660850d2ab2"
 git = "https://github.com/wmjtyd/libstock.git"
 default-features = false
 features = ["crypto", "zeromq", "slack"]
+branch = "develop"
