--- a/crypto-market-multicast/Cargo.toml
+++ b/crypto-market-multicast/Cargo.toml
@@ -9,7 +9,15 @@ edition = "2021"
 net2 = "0.2"
 clap = "~2.27.0"
 tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
-log = "0.4.17"
+notify = "5.0.0-pre.15"
+log = { version = "0.4.17", features = ["std"] }
+tracing = "0.1.35"
+serde = { version = "1.0.140", features = ["derive"] }
+serde_json = "1.0.82"
+anyhow = { version = "1.0.58", features = ["backtrace"] }
+arcstr = { version = "1.1.4", features = ["serde"] }
+crossbeam-channel = "0.5.6"
+tracing-subscriber = "0.3.14"
 
 
 [dependencies.wmjtyd-libstock]
