--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,4 +1,4 @@
-name: Cargo fmt
+name: Prettier
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -9,9 +9,6 @@ on:
     branches: ["main"]
   pull_request:
   workflow_dispatch:
-
-env:
-  CARGO_TERM_COLOR: always
 
 jobs:
   build:
@@ -24,16 +21,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install Prettier
+        run: npm i -g prettier
+
       - name: Format codebase
-        run: cargo fmt
+        run: prettier -w .
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
           token: ${{ github.token }}
-          commit-message: "style: cargo fmt [skip ci]"
+          commit-message: "style: prettier [skip ci]"
           author: "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
-          branch: fmt/cargo-fmt
+          branch: fmt/prettier
           delete-branch: true
-          title: "style: cargo fmt"
+          title: "style: prettier"
           labels: ci:style
