--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -37,3 +37,4 @@ jobs:
           delete-branch: true
           title: "style: prettier"
           labels: ci:style
+          base: ${{ github.head_ref }}
