--- a/.github/workflows/rust-fmt.yml
+++ b/.github/workflows/rust-fmt.yml
@@ -37,3 +37,4 @@ jobs:
           delete-branch: true
           title: "style: cargo fmt"
           labels: ci:style
+          base: ${{ github.head_ref }}
