--- a/crypto-market-integration/Cargo.toml
+++ b/crypto-market-integration/Cargo.toml
@@ -24,30 +24,11 @@ phf = { version = "0.11.1", features = ["macros"] }
 futures = "0.3.21"
 
 clap = "~2.27.1"
-
-
-[dependencies.crypto-crawler]
-git = "https://github.com/wmjtyd/crypto-crawler-rs"
-rev = "d41482af5fc33797ee12c54da809b660850d2ab2"
-
-
-[dependencies.crypto-market-type]
-git = "https://github.com/wmjtyd/crypto-crawler-rs"
-rev = "9c7cda9ab90c900c014566f9d279bef822cc37f1"
-
-
-[dependencies.crypto-msg-type]
-git = "https://github.com/wmjtyd/crypto-crawler-rs"
-rev = "9c7cda9ab90c900c014566f9d279bef822cc37f1"
-
-[dependencies.crypto-msg-parser]
-git = "https://github.com/wmjtyd/crypto-crawler-rs"
-rev = "d41482af5fc33797ee12c54da809b660850d2ab2"
-
-[dependencies.crypto-ws-client]
-git = "https://github.com/wmjtyd/crypto-crawler-rs"
-rev = "d41482af5fc33797ee12c54da809b660850d2ab2"
-
+crypto-crawler = "4.5.13"
+crypto-market-type = "1.1.3"
+crypto-msg-type = "1.0.10"
+crypto-msg-parser = "2.7.3"
+crypto-ws-client = "4.11.10"
 
 [dependencies.wmjtyd-libstock]
 git = "https://github.com/wmjtyd/libstock.git"
