--- a/crypto-market-publisher/Cargo.toml
+++ b/crypto-market-publisher/Cargo.toml
@@ -16,11 +16,7 @@ clap = "~2.27.1"
 env_logger = "0.4.3"
 url = "2"
 rustls = "0.20.6"
-
-[dependencies.crypto-msg-parser]
-version = "=2.6.2"
-git = "https://github.com/wmjtyd/crypto-crawler-rs"
-rev = "d41482af5fc33797ee12c54da809b660850d2ab2"
+crypto-msg-parser = "2.7.3"
 
 [dependencies.wmjtyd-libstock]
 git = "https://github.com/wmjtyd/libstock.git"
