--- a/crypto-market-replay/Cargo.toml
+++ b/crypto-market-replay/Cargo.toml
@@ -12,12 +12,6 @@ tracing = "0.1"
 tracing-subscriber = { version="0.3", features = ["env-filter"] }
 tower-http = { version = "0.3.4", features = ["fs", "trace"] }
 headers = "0.3"
-# crypto-markets = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
-# crypto-market-type = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
-# crypto-msg-type = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
-# crypto-pair = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
-# crypto-rest-client = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
-# crypto-ws-client = { git = "https://github.com/wmjtyd/crypto-crawler-rs" }
 chrono = "0.4.21"
 rust_decimal = "1.26.1"
 rust_decimal_macros = "1.26.1"
@@ -28,10 +22,8 @@ serde_derive = "1.0.143"
 rand = "0.8.5"
 futures = "0.3.21"
 toml = "0.5.9"
-
-[dependencies.crypto-crawler]
-git = "https://github.com/wmjtyd/crypto-crawler-rs"
-rev = "d41482af5fc33797ee12c54da809b660850d2ab2"
+crypto-crawler = "4.5.13"
+crypto-msg-parser = "2.7.3"
 
 [dependencies.wmjtyd-libstock]
 git = "https://github.com/wmjtyd/libstock.git"
@@ -39,6 +31,3 @@ default-features = false
 features = ["crypto", "zeromq", "slack"]
 branch = "develop"
 
-[dependencies.crypto-msg-parser]
-git = "https://github.com/wmjtyd/crypto-crawler-rs"
-rev = "d41482af5fc33797ee12c54da809b660850d2ab2"
