--- a/crypto-market-integration/Cargo.toml
+++ b/crypto-market-integration/Cargo.toml
@@ -10,7 +10,7 @@ chrono = "0.4.22"
 
 clap = "~2.27.1"
 crypto-crawler = "4.5.13"
-crypto-msg-parser = "2.7.3"
+crypto-msg-parser = {git="https://github.com/crypto-crawler/crypto-msg-parser.git"}
 crypto-ws-client = "4.11.10"
 env_logger = "0.9.0"
 futures = "0.3.23"
@@ -23,6 +23,6 @@ tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
 
 [dependencies.wmjtyd-libstock]
 git = "https://github.com/wmjtyd/libstock.git"
-# default-features = false
-# features = ["crypto", "zeromq", "slack"]
+default-features = false
+features = ["crypto", "zeromq", "slack"]
 branch = "develop"
