--- a/crypto-market-recorder/Cargo.toml
+++ b/crypto-market-recorder/Cargo.toml
@@ -19,6 +19,7 @@ slack-hook = "0.8.0"
 thiserror = "1.0.32"
 tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
 tracing = "0.1.36"
+tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 
 [dependencies.wmjtyd-libstock]
 git = "https://github.com/wmjtyd/libstock.git"
